--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "css-loader": "^5.0.2",
+    "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.2",
+    "react-input-emoji": "^2.1.1",
+    "react-scripts": "^4.0.2",
+    "socket.io-client": "^3.1.1",
+    "style-loader": "^2.0.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
